# asciifier

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
asciifier/: Cargo.toml
asciifier/src/: ascii_image.rs  asciifier.rs  basic.rs  chars.rs  error.rs  font_handler.rs  grouped_image.rs  lib.rs  output.rs
asciifier/src/chars/: char.rs  font_handler.rs
egui_app/: Cargo.toml
egui_app/src/: app.rs  file_selection.rs  font_builder.rs  main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: app.rs  ascii_image.rs  asciifier.rs  basic.rs  font_handler.rs  lib.rs  main.rs
style/: output.css
