[package]
name = "asciifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
ansi_rgb = "0.2.0"
rgb = "0.8"
ttf-parser = "0.18.1"
base64 = "0.13"
xmlwriter = "0.1"
ab_glyph = "0.2.20"
